--- a/planthome/pubspec.yaml
+++ b/planthome/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-http: ^0.13.3
+  http: ^0.13.3
   dio: ^4.0.0
   dio_cookie_manager: ^2.0.0
   permission_handler: ^8.2.2
@@ -43,6 +43,7 @@ http: ^0.13.3
   hive_flutter: ^1.1.0
   get_it: ^7.2.0
   flutter_bloc: ^7.3.0
+  intl: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
